test/test5.js

import '../index.js';

class foo {

}

foo.bar();


// TypeError: foo.bar is not a function
//     at file:///home/aaron/dev/help-me/test/test5.js:8:5
//     at ModuleJob.run (node:internal/modules/esm/module_job:183:25)
//     at async Loader.import (node:internal/modules/esm/loader:178:24)
//     at async Object.loadESM (node:internal/process/esm_loader:68:5)
//     at async handleMainPromise (node:internal/modules/run_main:63:12)

// Found 5 possible answer(s) on Stackoverflow:
// ======================================================================
//   Tags:            javascript, node.js
//   Title:           &#39;TypeError: is not a function&#39; in Node.js
//   Creation:        2015-11-23 06:42:12, Last activity: 2021-06-11 08:31:18
//   Answered:        true, answers: 10, views: 105765
//   Question link:   https://stackoverflow.com/questions/33865068/typeerror-is-not-a-function-in-node-js
// ======================================================================
//   Tags:            javascript, jquery, wordpress
//   Title:           TypeError: $ is not a function WordPress
//   Creation:        2012-09-04 06:59:23, Last activity: 2021-03-27 01:55:17
//   Answered:        true, answers: 12, views: 145434
//   Question link:   https://stackoverflow.com/questions/12258282/typeerror-is-not-a-function-wordpress
// ======================================================================
//   Tags:            javascript, jquery
//   Title:           TypeError: $(...). is not a function
//   Creation:        2016-05-27 07:05:20, Last activity: 2021-09-20 09:20:16
//   Answered:        true, answers: 4, views: 56678
//   Question link:   https://stackoverflow.com/questions/37476912/typeerror-is-not-a-function
// ======================================================================
//   Tags:            gulp, gulp-task
//   Title:           TypeError ... is not a function
//   Creation:        2017-12-10 16:19:32, Last activity: 2017-12-10 18:34:58
//   Answered:        true, answers: 1, views: 2171
//   Question link:   https://stackoverflow.com/questions/47740784/typeerror-is-not-a-function
// ======================================================================
//   Tags:            javascript, html, function, console
//   Title:           TypeError: - is not a function
//   Creation:        2020-03-18 00:02:26, Last activity: 2020-03-18 00:10:31
//   Answered:        true, answers: 1, views: 156
//   Question link:   https://stackoverflow.com/questions/60731824/typeerror-is-not-a-function
// ======================================================================
